<resources>
    <string name="app_name">MyAccount</string>
    <string name="title_activity_out_come">OutComeActivity</string>
    <string name="Money">理财通</string>
    <string name="pwd">请输入密码</string>
    <string name="pay">支出</string>
    <string name="revenue">收入</string>
    <string name="note">便签</string>
    <string name="install">设置</string>
    <string name="showinfo_btnflag">新增便签</string>
    <string name="accountflag_btncancel">取消</string>
    <string name="accountflag_btnok">确定</string>
    <string name="accountflag_txtedit">编辑</string>
    <string name="flagmanage_btnup">修改</string>
    <string name="flagmanage_btndel">删除</string>
    <string name="oldpwd">请输入旧密码</string>
    <string name="newpwd">请输入新密码</string>
    <string name="configpwd">请确认新密码</string>
    <string name="login">登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
