<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/rg_tab_bar"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_white"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_channel"
            android:text="@string/pay"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rb_message"
            android:text="@string/revenue"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rb_better"
            android:text="@string/note"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rb_setting"
            android:text="@string/install"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:id="@+id/div_tab_bar"
        android:background="@color/div_white"
        android:layout_above="@+id/rg_tab_bar"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/vpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/div_tab_bar"
        />
</RelativeLayout>