<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tabhost1"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.92"
            ></FrameLayout>

        <!-- 隐藏TabWidget -->
        <TabWidget
            android:id="@android:id/tabs"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </TabWidget>

        <!-- 视觉上,用单选按钮替代TabWidget -->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/tabGroup"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_white"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/zhichu"
                android:text="@string/pay"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/shouru"
                android:text="@string/revenue"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/bianqing"
                android:text="@string/note"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/shezhi"
                android:text="@string/install"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_install"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>
    </LinearLayout>
</TabHost>