<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_login">

    <LinearLayout
        android:id="@+id/loginPanel"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_login_div" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Money"
            android:layout_marginTop="15dp"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/pwdEt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="15dp"
            android:singleLine="true"
            android:password="true"
            android:hint="@string/pwd"
            android:ems="10" />

        <Button
            android:id="@+id/subBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:text="@string/login"
            android:background="@drawable/background_button_div"/>
    </LinearLayout>

</RelativeLayout>
