<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/itemflag"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutAddFlag"
        android:orientation="vertical"
        android:layout_weight="0.06">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCancelFlag"
                android:text="@string/accountflag_btncancel"
                android:textSize="18dp"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtEditFlag"
                android:text="@string/accountflag_txtedit"
                android:textColor="@color/bg_black"
                android:textSize="26dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnOkFlag"
                android:text="@string/accountflag_btnok"
                android:textSize="18dp"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/etFlag"
            />
    </LinearLayout>
</LinearLayout>
