<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="chen.com.myaccount.OutComeAddActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="86dp"
                android:layout_height="54dp"
                android:text="旧密码："
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/oldpwd"
                android:hint="@string/oldpwd"
                android:inputType="textPassword"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="85dp"
                android:layout_height="54dp"
                android:text="新密码："/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/newpwd"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:hint="@string/newpwd"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:text="确认新密码："/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/configpwd"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:hint="@string/configpwd"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:id="@+id/finish"
                android:text="确认" />
            <Button
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:id="@+id/exit"
                android:text="取消"/>

        </LinearLayout>



    </LinearLayout>
</android.support.constraint.ConstraintLayout>
